yaml/2_osfx_dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-dns
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        args:
        - --source=ingress # service is also possible
        - --domain-filter=osfx.tk # (optional) limit to only example.com domains; change to match the zone created above.
        - --provider=digitalocean
        resources:
          requests:
            memory: "24Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
