yaml/osfx-thales-sim.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osfx-hsm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osfx-hsm
  strategy: {}
  template:
    metadata:
      labels:
        app: osfx-hsm
    spec:
      containers:
      - image: vmantek/thales-sim
        name: osfx-hsm
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: osfx-hsm
  name: osfx-hsm
spec:
  ports:
  - name: 9998-9998-tcp-listener
    port: 9998
    protocol: TCP
    targetPort: 9998
  - name: 9997-9997-console-listener
    port: 9997
    protocol: TCP
    targetPort: 9997
  selector:
    app: osfx-hsm
  type: ClusterIP
