yaml/10_osfx-hosts.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: osfx-hosts
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - osfx.cloud
    - json.osfx.cloud
    - auth.osfx.cloud
    - data.osfx.cloud
    - card.osfx.cloud
    - user.osfx.cloud
    secretName: osfx-cert 
  rules:
    - host: osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-page
              servicePort: 80
    - host: iso.osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-tmc
              servicePort: 5010
    - host: json.osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-json
              servicePort: 5011
    - host: auth.osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-auth
              servicePort: 5020
    - host: user.osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-user
              servicePort: 5021
    - host: data.osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-data
              servicePort: 5030
    - host: card.osfx.cloud
      http: 
        paths: 
          - backend: 
              serviceName: osfx-card
              servicePort: 5040
