yaml/osfx-ingress-ssl.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: osfx-nginx
    external-dns.alpha.kubernetes.io/hostname: osfx.co
  name: osfx-ingress
spec: 
  rules: 
    - 
      host: iso.osfx.co
      http: 
        paths: 
          - 
            backend: 
              serviceName: osfx-tmc
              servicePort: 5010
    - 
      host: api.osfx.co
      http: 
        paths: 
          - 
            backend: 
              serviceName: osfx-tmc
              servicePort: 5011
    - 
      host: auth.osfx.co
      http: 
        paths: 
          - 
            backend: 
              serviceName: osfx-auth
              servicePort: 5020
    - 
      host: user.osfx.co
      http: 
        paths: 
          - 
            backend: 
              serviceName: osfx-user
              servicePort: 5021
    - 
      host: data.osfx.co
      http: 
        paths: 
          - 
            backend: 
              serviceName: osfx-data
              servicePort: 5030
    - 
      host: page.osfx.co
      http: 
        paths: 
          - 
            path: /
            backend: 
              serviceName: osfx-page
              servicePort: 80
  tls: 
    - 
      hosts: 
        - auth.osfx.co
        - user.osfx.co
        - api.osfx.co
        - card.osfx.co
        - data.osfx.co
        - page.osfx.co
        - iso.osfx.co
      secretName: osfx-tls
